# smp-tp8-noel_lecaillon

./: CMakeLists.txt  README.md  main.cpp
src/: animal.cpp  animal.h  attaque.cpp  attaque.h  lion.cpp  lion.h  loup.cpp  loup.h  ours.cpp  ours.h  pierre.cpp  pierre.h
